<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="landscape"
    tools:context=".ui.CollectorAddAlbumActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.test.viewmodel.CollectorAddAlbumViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#01579B"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:titleTextColor="#FEFEFE" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/agregar_lbum"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:text="@={viewModel.name}"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textViewErrorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@={viewModel.errorName}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/imagen"
                android:inputType="text"
                android:text="@={viewModel.image}"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textViewErrorImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@={viewModel.errorImage}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/fecha_lanzamiento"
                android:inputType="date"
                android:text="@={viewModel.releaseDate}"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textViewErrorBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@={viewModel.errorReleaseDate}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:entries="@array/genre" />

            <TextView
                android:id="@+id/textViewErrorGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@={viewModel.errorGenre}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/recordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:entries="@array/recordLabel" />

            <TextView
                android:id="@+id/textViewErrorRecordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@={viewModel.errorRecordLabel}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descripci_n"
                android:inputType="textMultiLine"
                android:text="@={viewModel.description}"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textViewErrorDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@={viewModel.errorDescription}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:width="50dp"
                    android:backgroundTint="#01579B"
                    android:maxWidth="50dp"
                    android:minWidth="50dp"
                    android:text="@string/agregar"
                    android:textColorHighlight="#2196F3"
                    android:textColorLink="#03A9F4"
                     />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:width="30dp"
                    android:backgroundTint="#D32F2F"
                    android:maxWidth="30dp"
                    android:minWidth="30dp"
                    android:text="@string/cancelar"
                    android:textColorHighlight="#F32121"
                    android:textColorLink="#F40303"
                     />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>